@@ -162,10 +162,11 @@ public:
 
     // Shader SkSL requires an entry point that looks like:
     //     vec4 main(vec2 inCoords) { ... }
-    //   -or-
+    //
+    // Private runtime effects also allow a signature that takes the input color:
     //     vec4 main(vec2 inCoords, vec4 inColor) { ... }
     //
-    // Most shaders don't use the input color, so that parameter is optional.
+    // However, this signature is deprecated and is slated for removal.
     static Result MakeForShader(SkString sksl, const Options&);
     static Result MakeForShader(SkString sksl) {
         return MakeForShader(std::move(sksl), Options{});
